--- a/src/app/atendimento-paciente/ficha-consulta-retorno/avaliacao-consumo-habitual/avaliacao-consumo-habitual.component.html
+++ b/src/app/atendimento-paciente/ficha-consulta-retorno/avaliacao-consumo-habitual/avaliacao-consumo-habitual.component.html
@@ -9,7 +9,7 @@
             <b>Prot. Total (g):</b> {{ avaliacaoConsumoHabitual.proteinaTotalGramas }}
         </div>
         <div class="col-12 col-lg-2">
-            <b>Prot. AVB (g):</b> {{ avaliacaoConsumoHabitual.proteinaTotalGramas }}
+            <b>Prot. AVB (g):</b> {{ avaliacaoConsumoHabitual.proteinaAVBGramas }}
         </div>
         <div class="col-12 col-lg-2">
             <b>CHO (g):</b> {{ avaliacaoConsumoHabitual.carboidratoGramas }}
