--- a/src/app/paciente-historicos/historico-alimentar/fieldset-historico-alimentar/fieldset-historico-alimentar.component.html
+++ b/src/app/paciente-historicos/historico-alimentar/fieldset-historico-alimentar/fieldset-historico-alimentar.component.html
@@ -1,6 +1,10 @@
 <p-fieldset [toggleable]="true" [collapsed]="true">
     <p-header>
         Histórico Alimentar
+
+        <span *ngIf="informacoesPreviasHistoricosAlimentares.historicoEstaDesatualizado">
+            <i class="fas fa-exclamation-circle text-warning"></i>
+        </span>
     </p-header>
 
     <div class="borda-table">
@@ -76,7 +80,14 @@
                 </div>
                 
                 <div *ngIf="previaHistoricosAlimentares && previaHistoricosAlimentares.length > 0" class="col-12">
-                    Data prevista para próxima atualização: {{ dataProximaAtualizacao }}
+                    <span *ngIf="!informacoesPreviasHistoricosAlimentares.historicoEstaDesatualizado">
+                        Data prevista para próxima atualização: {{ dataProximaAtualizacao }}
+                    </span>
+                   
+                    <span *ngIf="informacoesPreviasHistoricosAlimentares.historicoEstaDesatualizado"
+                        [ngClass]="informacoesPreviasHistoricosAlimentares.historicoEstaDesatualizado ? 'text-danger' : ''">
+                        {{ dataProximaAtualizacao }}
+                    </span>
                 </div>
             </ng-template>
         </p-table>
