--- a/src/app/paciente-historicos/historico-patologia-familiares-por-data/fieldset-historico-patologia-familiares/fieldset-historico-patologia-familiares.component.html
+++ b/src/app/paciente-historicos/historico-patologia-familiares-por-data/fieldset-historico-patologia-familiares/fieldset-historico-patologia-familiares.component.html
@@ -1,6 +1,10 @@
 <p-fieldset [toggleable]="true" [collapsed]="true">
     <p-header>
         Histórico Patologia Familiares
+
+        <span *ngIf="informacoesPreviasHistoricosFamiliaresPorData.historicoEstaDesatualizado">
+            <i class="fas fa-exclamation-circle text-warning"></i>
+        </span>
     </p-header>
 
     <div class="borda-table">
@@ -77,7 +81,14 @@
                 </div>
                 
                 <div *ngIf="previaHistoricosPatologiaFamiliares && previaHistoricosPatologiaFamiliares.length > 0" class="col-12">
-                    Data prevista para próxima atualização: {{ dataProximaAtualizacao }}
+                    <span *ngIf="!informacoesPreviasHistoricosFamiliaresPorData.historicoEstaDesatualizado">
+                        Data prevista para próxima atualização: {{ dataProximaAtualizacao }}
+                    </span>
+                    
+                    <span *ngIf="informacoesPreviasHistoricosFamiliaresPorData.historicoEstaDesatualizado"
+                        [ngClass]="informacoesPreviasHistoricosFamiliaresPorData.historicoEstaDesatualizado ? 'text-danger' : ''">
+                        {{ dataProximaAtualizacao }}
+                    </span>
                 </div>
             </ng-template>
         </p-table>
