--- a/src/app/paciente-historicos/historico-questionario-frequencia-alimentar/historico-questionario-frequencia-alimentar/historico-questionario-frequencia-alimentar.component.html
+++ b/src/app/paciente-historicos/historico-questionario-frequencia-alimentar/historico-questionario-frequencia-alimentar/historico-questionario-frequencia-alimentar.component.html
@@ -2,6 +2,10 @@
 
     <p-header>
         Questionário Frequência Alimentar
+
+        <span *ngIf="informacoesPreviasQuestionarios.historicoEstaDesatualizado">
+            <i class="fas fa-exclamation-circle text-warning"></i>
+        </span>
     </p-header>
 
     <div class="borda-table">
@@ -74,8 +78,16 @@
                     {{ previaQuestionarios ? previaQuestionarios.length : 0 }}
                 </div>
                 
+                
                 <div *ngIf="previaQuestionarios && previaQuestionarios.length > 0" class="col-12">
-                    Data prevista para próxima atualização: {{ dataProximaAtualizacao }}
+                    <span *ngIf="!informacoesPreviasQuestionarios.historicoEstaDesatualizado">
+                        Data prevista para próxima atualização: {{ dataProximaAtualizacao }}
+                    </span>
+                    
+                    <span *ngIf="informacoesPreviasQuestionarios.historicoEstaDesatualizado"
+                        [ngClass]="informacoesPreviasQuestionarios.historicoEstaDesatualizado ? 'text-danger' : ''">
+                        {{ dataProximaAtualizacao }}
+                    </span>
                 </div>
             </ng-template>
         </p-table>
